feat: add notes events to timeline services